Changes since 0.1.18:

* Use 'su -p -c' instead of 'su -s'. Some systems don't have -s (reported by
  Sampo Vuori).

* Updated to use D-BUS 0.2 API.

* Send better error messages to ZeroProgress.

Changes since 0.1.17:

* Don't compile with -Werror (header files on some systems generate warnings).
  Get rid of compiler warning about an unsigned comparision (reported by 
  Stephen Watson).

* Allow downloads to be cancelled.

* Send errors (to ZeroProgress, etc) when a kernel request fails.

* Configure check for missing expat.h.

* Fixed some cases of using GFP_KERNEL with a spinlock held (reported by
  Tristan).

* Use new index.tar.bz2 file. Only fetch index.xml file if actually needed.

Changes since 0.1.16:

* Support for Linux 2.6 (tested with 2.6.0-pre7).

* New mirrors.xml file supplied in the initial archive.
  This will allow the index to be downloaded separately, although at present
  it is also in the main archive too.

* Unsigned sites now give an error instead of a warning (the transition
  period is over; mirrors.xml is required, so sites have to rerun 0build
  anyway).

* Brought testing framework up-to-date.

Changes since 0.1.15:

* Uses expat instead of libxml for XML parsing (smaller).

* Added version numbers to LazyFS module. Allows easier upgrading.
  (suggested by Joachim Kupke).

* The helper now runs as a daemon, with output going to syslog.

* init.d/0install script is created to start and stop the daemon.

* 0refresh and other programs now use DBUS to communicate with zero-install.

Changes since 0.1.14:

* Removed unused expat include (spotted by Stuart Langridge).

* The MD5 checksum for downloaded archives is now checked.

* Lots of fixed-sized buffers were converted to dynamically-sized ones.

* GPG signatures are verified when updating a site index (needs auditing).

* override.xml file can be used to add symlinks to the filesystem.
  (the 0divert program uses this)

Changes since 0.1.13:
